fixing the alignment of h2

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1 {
 }
 
 h2 {
+    text-align:left;
     font-size: 1.8em;
     margin-top: 20px;
 }
